<resources>
    <string name="app_name">Calculator</string>
    <string name="numberText">Enter two numbers</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">\u00F7</string>
    <string name="theResult">Result</string>
    <string name="buttonClear">CLR</string>
    <string name="square">x\u00B2</string>
    <string name="cubed">x\u00B3</string>
    <string name="squareRoot">\u221A</string>
    <string name="xToThePowerOfX">x\u02E3</string>
</resources>
